# care-india-state-data

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml
src/care_india_state_data/: __init__.py  dedupe_govt_organization.py  load_govt_organization.py
src/care_india_state_data/data/india/: states-and-districts.json
src/care_india_state_data/data/india/jharkhand/lsg/: 248052.json  248053.json  250423.json  250433.json  250434.json  250435.json  250445.json  253166.json  276352.json  277137.json
